# fastapi-todo

./: .gitignore  Database_Config.md  Dockerfile  README.md  pyproject.toml
docs/: Authentication_and_Authorization.md  Database_Config.md  Dependency_Injection.md  FastAPI_Deployment_Options.md  General_Process_for_FastAPI_Backend.md  Models_Explanation.md  PostgreSQL_Hosting_Options.md  Pydantic_and_Data_Validation.md  RBAC_Advanced.md  Routers_and_Endpoints.md  Security_Vulnerabilities.md  Ubuntu_VM_Deployment_Guide.md
todoapp/: database.py  main.py  todos.db  todosapp.db
todoapp/routers/: admin.py  auth.py  todos.py  users.py
